# tzel

./: .gitignore  Cargo.toml  LICENSE  README.md  Scarb.toml  audit_followup.md  bench.sh  findings.md  latest_findings.md  minimal_tez_bridge.md  proof_test_gap.md  spec.md
.github/workflows/: proof-roundtrips.yml  release-binaries.yml  unit-tests.yml  whitepaper.yml
apps/: README.md
apps/demo/: Cargo.toml
apps/demo/src/: main.rs
apps/ledger/: Cargo.toml
apps/ledger/src/: main.rs
apps/prover/: Cargo.toml  bench.sh
apps/prover/src/: main.rs
apps/wallet/: Cargo.toml
apps/wallet/src/: lib.rs  main.rs
apps/wallet/testdata/: base_wallet_bds.json
attic/: PLAN_N2.md  bench.sh  cpu_air_params.json  debug_config.rs  hash.cairo  message.md  scenarios.cairo  status.md  step_shield2.cairo  step_testvec.cairo
cairo/: Scarb.toml
cairo/src/: blake_hash.cairo  lib.cairo  merkle.cairo  run_shield.cairo  run_transfer.cairo  run_unshield.cairo  shield.cairo  transfer.cairo  unshield.cairo  xmss_common.cairo
cli/: Cargo.toml  MUTATION_TESTING.md
cli/src/: canonical_wire.rs  lib.rs
cli/tests/: integration.rs
core/: Cargo.toml
core/proptest-regressions/: kernel_wire.txt
core/src/: canonical_wire.rs  kernel_wire.rs  lib.rs  operator_api.rs
demo/: Cargo.toml  Scarb.toml
demo/src/: lib.cairo  main.rs
docker/: Dockerfile.binaries
docs/: README.md  index.html  shadownet_shielded_transfer_plan.md  shadownet_tutorial.md  spec.html  spec.md  tzel_lite_whitepaper.tex  ushuaianet_tutorial.md  wallet_detection_service.md  wallet_server.md  whitepaper.tex
docs/analysis/: withdraw-auth-gap.md
experiments/hash_sig/: Cargo.toml
experiments/hash_sig/src/: gen_witness.rs  main.rs
experiments/wots_circuit/: Scarb.toml
experiments/wots_circuit/src/: hash.cairo  lib.cairo  transfer_baseline.cairo  transfer_lamport.cairo  transfer_wots16.cairo  transfer_wots4.cairo
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bootloader_output.rs  decode_wire.rs  encrypted_note_validate.rs  felt_conversions.rs
ocaml/protocol/: detection.ml  encoding.ml  hash.ml  keys.ml  note.ml  transaction.ml  wots.ml
ocaml/services/: ledger.ml  prover.ml
ocaml/test/: gen_interop_scenario.ml  gen_vectors.ml  test_interop.ml  test_main.ml  test_vectors.ml
ops/shadownet/: README.md  shadownet.env.example
ops/shadownet/systemd/: octez-dal-node.service  octez-node.service  octez-rollup-node.service  tzel-detect.service  tzel-operator.service
reprover/: Cargo.toml
reprover/src/: custom_circuit.rs  lib.rs  main.rs
scripts/: build_alpha_sandbox_params.py  build_rollup_kernel_release.sh  cairo_statement_mutation_smoke.sh  cairo_xmss_mutation_smoke.sh  init_shadownet_operator_box.sh  install_octez_ubuntu.sh  install_smart_rollup_installer.sh  install_tzel_binaries.sh  ocaml_unit_tests.sh  octez_rollup_sandbox_dal_smoke.sh  octez_rollup_sandbox_smoke.sh  prepare_rollup_config_admin.sh  sandbox_withdraw_auth_bypass_poc.sh  shadownet_live_e2e_smoke.sh  shadownet_operator_preflight.sh  submit_rollup_config.sh  unit_coverage.sh
scripts/tests/: test_build_alpha_sandbox_params.py  test_octez_rollup_sandbox_dal_smoke.py  test_shadownet_operator_paths.py  test_submit_rollup_config.py  test_workflow_references.py
services/reprover/: Cargo.toml
services/reprover/src/: custom_circuit.rs  lib.rs
services/tzel/: Cargo.toml
services/tzel/src/: canonical_wire.rs  interop_scenario.rs  lib.rs  proof_bench.rs  protocol_vectors.rs
services/tzel/tests/: cross_impl_interop.rs  integration.rs
specs/: rationale.md  security.md  spec.md
specs/ocaml_vectors/: README.md  protocol_v1.json  protocol_v1_ocaml.json  test_vector_spec.md
specs/test_vectors/: canonical_wire_v1.json
src/: blake_hash.cairo  common.cairo  lib.cairo  merkle.cairo  run_shield.cairo  run_transfer.cairo  run_unshield.cairo  shield.cairo  step_join.cairo  step_shield.cairo  step_split.cairo  step_testvec.cairo  step_unshield.cairo  transfer.cairo  tree.cairo  unshield.cairo
test_vectors/: canonical_wire_v1.json
tezos/rollup-kernel/: Cargo.toml  README.md
tezos/rollup-kernel/src/: lib.rs
tezos/rollup-kernel/testdata/: verified_bridge_flow.json
tezos/rollup-kernel/tests/: bridge_flow.rs  octez_sandbox.rs  octez_sandbox_dal.rs
tools/wasm-opscan/: Cargo.toml
tools/wasm-opscan/src/: main.rs
verifier/: Cargo.toml
verifier/src/: bundle.rs  canonical_verify_meta.hex  lib.rs  verify_meta_codec.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  mockService.ts  realService.ts  types.ts  useAddressBook.ts
