[workspace]
resolver = "2"
members = [
  "apps/demo",
  "apps/ledger",
  "apps/wallet",
  "core",
  "services/tzel",
  "tezos/rollup-kernel",
  "verifier",
]

[patch.crates-io]
starknet-ff = { path = "third_party/patched-crates/starknet-ff-0.3.7" }
lambdaworks-math = { path = "third_party/patched-crates/lambdaworks-math-0.13.0" }
