[package]
name = "tzel-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tzel_core"
path = "src/lib.rs"

[dependencies]
bech32 = "0.11"
blake2s_simd = "1.0"
hex = "0.4"
chacha20poly1305 = "0.10"
ml-kem = "=0.3.0-rc.2"
serde = { version = "1", features = ["derive"] }
tezos_data_encoding = "0.6"
nom = "7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9"
serde_json = "1"

[dev-dependencies]
proptest = "1"
