[package]
name = "tzel-prover-app"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "reprove"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tzel-verifier = { path = "../../verifier" }
tzel-reprover = { path = "../../services/reprover" }
