[package]
name = "tzel-rollup-kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "tzel_rollup_kernel"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4"
ml-kem = "0.3.0-rc.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tzel-core = { path = "../../core" }
tzel-verifier = { path = "../../verifier" }
