[package]
name = "tzel-rollup-kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "tzel_rollup_kernel"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tezos_data_encoding_05 = { package = "tezos_data_encoding", version = "0.5" }
tezos-smart-rollup-encoding = "0.2.2"
tzel-core = { path = "../../core" }
tzel-verifier = { path = "../../verifier" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["custom"] }

[dev-dependencies]
ml-kem = "=0.3.0-rc.2"
